trying to start up tailwind stuff, having trouble

--- a/epimood/public/index.html
+++ b/epimood/public/index.html
@@ -39,5 +39,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
+    <p class="font-sans">The quick brown fox ...</p>
+<p class="font-serif">The quick brown fox ...</p>
+<p class="font-mono">The quick brown fox ...</p>
+HELLO hello hello
+    <script src = '../tailwind.config.js'>
   </body>
 </html>
