was able to use localhost3001 to show index.html (but the images and script are not working)

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -9,15 +9,21 @@
   <title>EpiMood (Alpha)</title>
 </head>
 <body>
-  <body class="bg-sky-900 text-indigo-400 font-mono text-xl">
+  <body class="bg-slate-900 text-indigo-400 text-xl">
 		<!-- HEADER-->
 		<div>
-			<header class="text-5xl px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto  my-7 centerText text-violet-200">
-				<h1 class="font-bold">EpiMood</h1>
+			<header class="box text-5xl px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto  my-7 centerText text-violet-200">
+			<img class = "float-right" src="../../assets/images/epiMoodLogo.png" width=300px alt="logo">
+        Tracking for Your Emotional Health
 			</header>
-
-
 		</div>
+    <div class="box px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto">
+     
+      <label>Mood Today (1-6):</label><br>
+      <input id="moodNumber" type="submit"><br>
+   
 
+    </div>
+<script src="../script/index.js">
 </body>
 </html>
