--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -24,6 +24,13 @@
    
 
     </div>
+
+    <footer class="centerText">
+      <li>Brought to you by Mary! 2022</li>
+      <a href="https://github.com/Cheez0id">Mary's Github</a>
+    </footer>
+
 <script src="../script/index.js">
+ 
 </body>
 </html>
