--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -1,3 +1,6 @@
+
+<!-- THIS WORKS WITH THE INDEX.JS THAT IS LINKED UNDER SCRIPT FOLDER, BUT NOT SURE HOW TO MAKE IT WORK WITH THE BACKEND -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,6 +34,7 @@
     </footer>
 
 <script src="../script/index.js">
+<script src="../../controllers/index.js">
  
 </body>
 </html>
