--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -15,9 +15,9 @@
   <body class="bg-slate-900 text-indigo-400 text-xl">
 		<!-- HEADER-->
 		<div>
-			<header class="box text-5xl px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto  my-7 centerText text-violet-200">
-			<img class = "float-right" src="../../assets/images/epiMoodLogo.png" width=300px alt="logo">
-        Tracking for Your Emotional Health
+			<header class="box text-xl px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto  my-7 centerText text-violet-200">
+			<img class = "float-right" src="/assets/images/epiMoodLogo3.png" width=300px alt="logo">
+        Tracking for Emotional Health
 			</header>
 		</div>
     <div class="box px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto">
