--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -22,9 +22,25 @@
 		</div>
     <div class="box px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto">
      
-      <label>Mood Today (1-6):</label><br>
-      <input id="moodNumber" type="submit"><br>
-   
+      <form>
+        <!-- <form action="/action_page.php"> -->
+         <form>
+         <input type="radio" id="joyful" value=1>
+         <label for="joyful">Joyful</label><br>
+         <input type="radio" id="powerful" value=2>
+         <label for="powerful">Powerful</label><br>
+         <input type="radio" id="peaceful" value=3>
+         <label for="peaceful">Peaceful</label><br>
+         <input type="radio" id="sad" value=4>
+         <label for="joyful">Sad</label><br>
+         <input type="radio" id="mad" value=5>
+         <label for="mad">Mad</label><br>
+         <input type="radio" id="scared" value=3>
+         <label for="scared">Scared</label><br>
+         <input type="submit" value="Submit" id="submitMood">
+          </form> 
+
+      </form>
 
     </div>
 
