added form with radios with values 1-6

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -25,17 +25,17 @@
       <form>
         <!-- <form action="/action_page.php"> -->
          <form>
-         <input type="radio" id="joyful" value=1>
+         <input type="radio" id="joyful" name="moodToday" value=1>
          <label for="joyful">Joyful</label><br>
-         <input type="radio" id="powerful" value=2>
+         <input type="radio" id="powerful" name="moodToday"  value=2>
          <label for="powerful">Powerful</label><br>
-         <input type="radio" id="peaceful" value=3>
+         <input type="radio" id="peaceful" name="moodToday"  value=3>
          <label for="peaceful">Peaceful</label><br>
-         <input type="radio" id="sad" value=4>
+         <input type="radio" id="sad" name="moodToday"  value=4>
          <label for="joyful">Sad</label><br>
-         <input type="radio" id="mad" value=5>
+         <input type="radio" id="mad" name="moodToday"  value=5>
          <label for="mad">Mad</label><br>
-         <input type="radio" id="scared" value=3>
+         <input type="radio" id="scared" name="moodToday"  value=3>
          <label for="scared">Scared</label><br>
          <input type="submit" value="Submit" id="submitMood">
           </form> 
