some styling for frontend

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -15,9 +15,11 @@
   <body class="bg-slate-900 text-indigo-400 text-xl">
 		<!-- HEADER-->
 		<div>
-			<header class="box text-xl px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto  my-7 centerText text-violet-200">
-			<img class = "float-right" src="/assets/images/epiMoodLogo3.png" width=300px alt="logo">
-        Tracking for Emotional Health
+      
+			<header class="box text-5xl px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto  my-7 centerText text-violet-200 flex">
+        <img class="centerText" src="../assets/images/epiMoodLogo3.png" width=300px alt="logo">
+      <!-- <img class = "float-right" src="/assets/images/epiMoodLogo3.png" width=300px alt="logo"> -->
+        <p>Tracking for Emotional Health</p>
 			</header>
 		</div>
     <div class="box px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto">
