--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -47,8 +47,8 @@
     </div>
 
     <footer class="text-xl px-6 pt-10 pb-8 sm:max-w-3xl sm:mx-auto  my-7 centerText text-violet-200">
-      Brought to you by Mary! 2022<br>
-      <a href="https://github.com/Cheez0id">Mary's Github</a>
+      <p>Brought to you by Mary! 2022</p><br>
+     <a class="box" href="https://github.com/Cheez0id">Mary's Github</a>
     </footer>
 
 <script src="../script/index.js"></script>
