oh girl we got it now~ git add -A congratulations to me on my first official full stack appgit add -A!

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -39,7 +39,8 @@
          <input type="radio" id="scared" name="moodToday"  value=6>
          <label for="scared">Scared</label><br>
          <input type="submit" value="Submit" id="submitMood">
-          </form> 
+          </form> <br>
+          <form><input type="submit" value="View All Entries" id="viewAllEntries"></form>
     <div id="result"></div>
 
     </div>
