--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -40,7 +40,10 @@
          <label for="scared">Scared</label><br>
          <input type="submit" value="Submit" id="submitMood">
           </form> <br>
-          <form><input type="submit" value="View All Entries" id="viewAllEntries"></form>
+          <form><input type="submit" value="View All Entries" id="viewAllEntries">
+          </form><br>
+          <form><input type="submit" value="Create New Entry" id="createNewEntry">
+          </form><br>
     <div id="result"></div>
 
     </div>
