added a test extra get request to make sure another route works

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -42,6 +42,8 @@
           </form> <br>
           <form><input type="submit" value="View All Entries" id="viewAllEntries">
           </form><br>
+          <form><input type="submit" value="View All Moods" id="viewAllMoods">
+          </form><br>
           <form><input type="submit" value="Create New Entry" id="createNewEntry">
           </form><br>
     <div id="result"></div>
