trying to make episode checkbox work

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -41,7 +41,7 @@
          <label for="scared">Scared</label><br>
          <label for="epiosdeCheckBox">Check if you had a signficant Episode today.</label> 
          
-         <input type="checkbox" name="episodeCheckBox"/><br><br>
+         <input type="checkbox" id='episodeCheckBox'/><br><br>
          <label for="notesToday">Notes for Today</label><br>
           <textarea name="notesToday" value="" cols="400" rows="50" style="height:120px; width:600px;">
          </textarea>
