--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -43,7 +43,7 @@
          
          <input type="checkbox" id='episodeCheckBox'/><br><br>
          <label for="notesToday">Notes for Today</label><br>
-          <textarea name="notesToday" value="" cols="400" rows="50" style="height:120px; width:600px;">
+          <textarea name="noteToday" id="noteToday" value="" cols="400" rows="50" style="height:120px; width:600px;">
          </textarea>
          <br>
          <input type="submit" value="Submit" id="submitMood">
