this should work now

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -38,19 +38,17 @@
          <input type="radio" id="mad" name="moodToday"  value=5>
          <label for="mad">Mad</label><br>
          <input type="radio" id="scared" name="moodToday"  value=6>
-         <label for="scared">Scared</label><br>
+         <label for="scared">Scared</label><br><br>
          <label for="epiosdeCheckBox">Check if you had a signficant Episode today.</label> 
-         
          <input type="checkbox" id='episodeCheckBox'/><br><br>
-         <label for="notesToday">Notes for Today</label><br>
+         <label for="makePrivateCheckBox">Make Private?</label> 
+         <input type="checkbox" id='makePrivateCheckBox'/><br><br>
+         <label for="make">Notes for Today</label><br>
           <textarea name="noteToday" id="noteToday" value="" cols="400" rows="50" style="height:120px; width:600px;">
          </textarea>
          <br>
-         <input type="submit" value="Submit" id="submitMood">
           </form> <br>
           <form><input type="submit" value="View All Entries" id="viewAllEntries">
-          </form><br>
-          <form><input type="submit" value="View All Moods" id="viewAllMoods">
           </form><br>
           <form><input type="submit" value="Create New Entry" id="createNewEntry">
           </form><br>
