--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -48,9 +48,11 @@
          </textarea>
          <br>
           </form> <br>
+          <form><input type="submit" value="Create New Entry" id="createNewEntry">
+          </form><br>
           <form><input type="submit" value="View All Entries" id="viewAllEntries">
           </form><br>
-          <form><input type="submit" value="Create New Entry" id="createNewEntry">
+          <form><input type="submit" value="Clear Form" id="clearForm">
           </form><br>
     <div id="result"></div>
 
