added a delete all route,button,thingy that works!

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -52,7 +52,9 @@
           </form><br>
           <form><input type="submit" value="View All Entries" id="viewAllEntries">
           </form><br>
-          <form><input type="submit" value="Clear Form" id="clearForm">
+          <form><input type="submit" value="Refresh Page" id="clearForm">
+          </form><br>
+          <form><input type="submit" value="Delete All Entries" id="deleteAll">
           </form><br>
     <div id="result"></div>
 
