I think I fixed the refresh button

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -52,7 +52,7 @@
           </form><br>
           <form><input type="submit" value="View All Entries" id="viewAllEntries">
           </form><br>
-          <form><input type="submit" value="Refresh Page" id="clearForm">
+          <form><input type="submit" value="Refresh Page" id="refreshPage">
           </form><br>
           <form><input type="submit" value="Delete All Entries" id="deleteAll">
           </form><br>
