should be able to delete one now

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -54,6 +54,11 @@
           </form><br>
           <form><input type="submit" value="Refresh Page" id="refreshPage">
           </form><br>
+          <form><input type="submit" value="Delete One Entry" id="deleteOne" name="hello">
+            </form>
+           <form> Id Number:<input type="text" value="" id="idInput">
+           </form>         
+          <br><br>
           <form><input type="submit" value="Delete All Entries" id="deleteAll">
           </form><br>
     <div id="result"></div>
