--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -56,7 +56,7 @@
           </form><br>
           <form><input type="submit" value="Delete One Entry" id="deleteOne" name="hello">
             </form>
-           <form> Id Number:<input type="text" value="" id="idInput">
+           <form> Id Number:<input type="text" value="" id="idInput" maxlength="4" size="4">
            </form>         
           <br><br>
           <form><input type="submit" value="Delete All Entries" id="deleteAll">
