working on making a promise to clear out the <p> in details

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -44,7 +44,7 @@
          <label for="makePrivateCheckBox">Make Private?</label> 
          <input type="checkbox" id='makePrivateCheckBox'/><br><br>
          <label for="make">Notes for Today</label><br>
-          <textarea name="noteToday" id="noteToday" value="" cols="400" rows="50" style="height:120px; width:600px;">
+          <textarea name="noteToday" id="noteToday" value="" style="height:120px; width:600px;"  >
          </textarea>
          <br>
           </form> <br>
