working on promisifing index.js 46-66

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -61,7 +61,11 @@
           <br><br>
           <form><input type="submit" value="Delete All Entries" id="deleteAll">
           </form><br>
-    <div id="result"></div>
+    <div id="result">
+      <p>SAMPLE CHILD</p>
+      <p>SAMPLE CHILD</p>
+      <p>SAMPLE CHILD</p>
+    </div>
 
     </div>
 <div class="box px-6 pt-10 pb-8 shadow-xl sm:max-w-3xl sm:mx-auto  my-7 centerText text-violet-200 flex">
