--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -54,10 +54,19 @@
           </form><br>
           <form><input type="submit" value="Refresh Page" id="refreshPage">
           </form><br>
-          <form><input type="submit" value="Delete One Entry" id="deleteOne" name="hello">
-            </form>
-           <form> Id Number:<input type="text" value="" id="idInput" maxlength="4" size="4">
-           </form>         
+          <br>
+            Edit an Entry:
+          <form> Id Number:<input type="text" value="" id="idEdit" maxlength="4" size="4">
+          </form>
+          <form> Edit the Note:<input type="text" value="" id="additional">
+          </form>
+          <form><input type="submit" value="change note" id="editOne">
+          </form> 
+          <br>
+          <!-- <form><input type="submit" value="Delete One Entry" id="deleteOne" >
+            </form> -->
+            <form> Delete Entry By Id Number:<input type="text" value="" id="idInput" maxlength="4" size="4">
+            </form>           
           <br><br>
           <form><input type="submit" value="Delete All Entries" id="deleteAll">
           </form><br>
