--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -63,10 +63,10 @@
           <form><input type="submit" value="change note" id="editOne">
           </form> 
           <br>
-          <!-- <form><input type="submit" value="Delete One Entry" id="deleteOne" >
-            </form> -->
+          
             <form> Delete Entry By Id Number:<input type="text" value="" id="idInput" maxlength="4" size="4">
-            </form>           
+            </form>  <form><input type="submit" value="Delete" id="deleteOne" >
+            </form>         
           <br><br>
           <form><input type="submit" value="Delete All Entries" id="deleteAll">
           </form><br>
