small html update

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -55,8 +55,8 @@
           <form><input type="submit" value="Refresh Page" id="refreshPage">
           </form><br>
           <br>
-            Edit an Entry:
-          <form> Id Number:<input type="text" value="" id="idEdit" maxlength="4" size="4">
+            
+          <form> Edit an Entry by Id Number:<input type="text" value="" id="idEdit" maxlength="4" size="4">
           </form>
           <form> Edit the Note:<input type="text" value="" id="additional">
           </form>
